<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantDetailsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plant_details_drawer_layout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="228dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:text="Scientific name"
                                android:textSize="020dp" />

                            <TextView
                                android:layout_width="208dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="5dp"
                                android:text="Common \nName"
                                android:textColor="@color/black"
                                android:textSize="50dp"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <androidx.cardview.widget.CardView
                            android:layout_width="230dp"
                            android:layout_height="230dp"
                            app:cardBackgroundColor="@android:color/white"
                            app:cardCornerRadius="100dp"
                            app:cardElevation="2dp"
                            android:layout_marginLeft="0dp"
                            android:layout_marginTop="-20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_thumbnail" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="110dp"
                            android:orientation="horizontal"

                            >

                            <LinearLayout
                                android:layout_width="213dp"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="15dp"
                                    android:src="@drawable/ic_thumbnail" />

                                <LinearLayout
                                    android:layout_width="122dp"
                                    android:layout_height="80dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/season"
                                        android:textColor="@color/gray"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:text="Spring"
                                        android:textColor="@color/black"
                                        android:textSize="25dp"
                                        android:textStyle="bold" />
                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="182dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="15dp"
                                    android:src="@drawable/ic_thumbnail" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/cycle"
                                        android:textColor="@color/gray"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="112dp"
                                        android:layout_height="80dp"
                                        android:layout_marginLeft="10dp"
                                        android:text="Perennial"
                                        android:textColor="@color/black"
                                        android:textSize="25dp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="213dp"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="15dp"
                                    android:src="@drawable/ic_thumbnail" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/temperature"
                                        android:textColor="@color/gray"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="80dp"
                                        android:layout_marginLeft="10dp"
                                        android:text="44°F - 64°F"
                                        android:textColor="@color/black"
                                        android:textSize="25dp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="181dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/ic_thumbnail" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/humidity"
                                        android:textColor="@color/gray"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="80dp"
                                        android:layout_marginLeft="10dp"
                                        android:text="High"
                                        android:textColor="@color/black"
                                        android:textSize="25dp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="7dp"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:text="Never gonna give you up never gonna let you down never gonna run around and dessert you Never gonna make you cry Never gonna say goodbye Never gonna tell you lies and hurt you!"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:id="@+id/imageListRecycleView"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>