<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity"
    android:background="@color/leaf">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top">
        <androidx.cardview.widget.CardView
            android:id="@+id/selectedPlantsCardView"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/lilwhite"
            app:cardElevation="10dp"
            android:visibility="gone">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedPlantsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ArrowSelectedPlant"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintHeight_max="250dp"/>
                <ImageView
                    android:id="@+id/ArrowSelectedPlant"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/arrow_up"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="expandHumid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/lilwhite"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">
            <LinearLayout
                android:id="@+id/layout_humid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidtitle"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@string/humid"
                    android:textColor="@color/verybrown">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:id="@+id/humidData"
                    android:textColor="@color/lilbrown"/>
            </LinearLayout>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChartHumid"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="expandTemp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/lilwhite"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">
            <LinearLayout
                android:id="@+id/layout_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/temptitle"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@string/temperature"
                    android:textColor="@color/verybrown">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:id="@+id/tempData"
                    android:textColor="@color/lilbrown"/>
            </LinearLayout>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChartTemp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:onClick="expandSoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/lilwhite"

            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">
            <LinearLayout
                android:id="@+id/layout_soilMoisture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/Soiltitle"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@string/soil_moisture"
                    android:textColor="@color/verybrown">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:id="@+id/soilData"
                    android:textColor="@color/lilbrown"/>
                </LinearLayout>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChartSoil"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:itemTextAppearance="@style/NavigationViewItemStyle"
        app:menu="@menu/navigation_menu"
        android:background="@color/lilwhite"
        app:itemTextColor="@color/verybrown"
        app:itemIconSize="40dp"
        app:itemVerticalPadding="20dp"
        tools:ignore="VisualLintBounds">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="15dp"
            android:layout_marginBottom="0dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:paddingLeft="35dp"
                    android:textSize="20sp"
                    android:text="Add"
                    android:textStyle="bold"
                    android:id="@+id/add_text"
                    android:textColor="@color/lilbrown"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lilbrown" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Remove"
                    android:id="@+id/remove_text"
                    android:textStyle="bold"
                    android:paddingLeft="40dp"
                    android:textColor="@color/lilbrown"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>